--- a/Roomie/Roomie/Post.storyboard
+++ b/Roomie/Roomie/Post.storyboard
@@ -23,60 +23,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aaL-q6-3ue">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aaL-q6-3ue">
                                 <rect key="frame" x="0.0" y="64" width="375" height="508"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="70" id="h8i-iE-Be8" customClass="PostTableViewCell" customModule="Roomie" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="60" id="h8i-iE-Be8" customClass="PostTableViewCell" customModule="Roomie" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="h8i-iE-Be8" id="4Hq-sf-btO">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="5wB-l7-VK5">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WtO-TX-R7b">
-                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="04J-C5-EUV">
-                                                            <rect key="frame" x="0.0" y="20" width="375" height="50"/>
-                                                            <subviews>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mgw-hC-v7V">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
-                                                                    <subviews>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZkK-m0-nGe">
-                                                                            <rect key="frame" x="0.0" y="12" width="359" height="21"/>
-                                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                            <nil key="textColor"/>
-                                                                            <nil key="highlightedColor"/>
-                                                                        </label>
-                                                                    </subviews>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                </view>
-                                                            </subviews>
-                                                        </stackView>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="04J-C5-EUV" firstAttribute="top" secondItem="5wB-l7-VK5" secondAttribute="top" constant="20" symbolic="YES" id="zJq-I8-DR4"/>
-                                                    </constraints>
-                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xX6-oc-1EC">
+                                                    <rect key="frame" x="16" y="8" width="343" height="16.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rva-Dc-Jcv">
+                                                    <rect key="frame" x="16" y="30.5" width="42" height="21"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QoK-Tc-nqg">
+                                                    <rect key="frame" x="16" y="30.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="QoK-Tc-nqg" firstAttribute="top" secondItem="xX6-oc-1EC" secondAttribute="bottom" constant="6" id="0J5-tK-Nqg"/>
+                                                <constraint firstAttribute="bottom" secondItem="QoK-Tc-nqg" secondAttribute="bottom" constant="8" id="0aR-0G-gQe"/>
+                                                <constraint firstItem="xX6-oc-1EC" firstAttribute="top" secondItem="4Hq-sf-btO" secondAttribute="top" constant="8" id="1Uh-jN-siS"/>
+                                                <constraint firstItem="xX6-oc-1EC" firstAttribute="leading" secondItem="4Hq-sf-btO" secondAttribute="leading" constant="16" id="JdO-R9-iZ7"/>
+                                                <constraint firstItem="Rva-Dc-Jcv" firstAttribute="top" secondItem="QoK-Tc-nqg" secondAttribute="top" id="Xni-QJ-UCr"/>
+                                                <constraint firstItem="QoK-Tc-nqg" firstAttribute="leading" secondItem="4Hq-sf-btO" secondAttribute="leading" constant="16" id="dUW-sn-EaZ"/>
+                                                <constraint firstItem="Rva-Dc-Jcv" firstAttribute="bottom" secondItem="QoK-Tc-nqg" secondAttribute="bottom" id="eTA-iJ-3Ii"/>
+                                                <constraint firstItem="Rva-Dc-Jcv" firstAttribute="leading" secondItem="QoK-Tc-nqg" secondAttribute="leading" id="qMM-vk-vLg"/>
+                                                <constraint firstItem="Rva-Dc-Jcv" firstAttribute="trailing" secondItem="QoK-Tc-nqg" secondAttribute="trailing" id="yVv-es-TSR"/>
+                                                <constraint firstAttribute="trailing" secondItem="xX6-oc-1EC" secondAttribute="trailing" constant="16" id="ymF-c1-ccl"/>
+                                            </constraints>
                                         </tableViewCellContentView>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="5wB-l7-VK5" secondAttribute="trailing" id="5Wz-yT-Xq6"/>
-                                            <constraint firstItem="5wB-l7-VK5" firstAttribute="leading" secondItem="h8i-iE-Be8" secondAttribute="leading" id="Eop-sV-uqM"/>
-                                            <constraint firstAttribute="bottom" secondItem="5wB-l7-VK5" secondAttribute="bottom" id="eew-DY-RzW"/>
-                                            <constraint firstItem="5wB-l7-VK5" firstAttribute="top" secondItem="h8i-iE-Be8" secondAttribute="top" id="vbd-Hw-y19"/>
-                                        </constraints>
                                         <connections>
-                                            <outlet property="authorNameLabel" destination="WtO-TX-R7b" id="nWg-QG-tom"/>
-                                            <outlet property="postLabel" destination="ZkK-m0-nGe" id="mFx-Ig-l0V"/>
+                                            <outlet property="authorNameLabel" destination="xX6-oc-1EC" id="AZA-PG-YEF"/>
+                                            <outlet property="bubbleView" destination="Rva-Dc-Jcv" id="QVr-Eo-1yr"/>
+                                            <outlet property="postTextLabel" destination="QoK-Tc-nqg" id="XhA-kr-jZy"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
